--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
 
   <!--CSS Bootstrap-->
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.4.1/dist/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="CSS/bootstrap.min.css">
+  <link rel="stylesheet" href="CSS/Style.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
   
@@ -68,7 +68,7 @@
 
         <div class="row">
           <div class="col-lg-6 offset-lg-1">
-            <img src="aboutMeImg.jpeg">
+            <img src="Images/aboutMeImg.jpeg">
           </div>
 
           <div class="col-lg-5">
@@ -95,7 +95,7 @@
                 <div class="col-lg-4 col-md-6 col-sm-6 col-6 container">
                   <div class="holder">
                     <div class="skills html"> 80%</div>
-                    <img src="HTML.png" alt="HTML"  width="300px" class="center">
+                    <img src="Images/HTML.png" alt="HTML"  width="300px" class="center">
                   </div>
                 </div>
 
@@ -103,7 +103,7 @@
                 <div class="col-lg-4 col-md-6 col-sm-6 col-6 container">
                   <div class="holder">
                     <div class="skills css"> 70%</div>
-                    <img src="CSS.png" alt="CSS"  width="300px" class="center" >
+                    <img src="Images/CSS.png" alt="CSS"  width="300px" class="center" >
                   </div>
                 </div>
 
@@ -111,7 +111,7 @@
                 <div class="col-lg-4 col-md-6 col-sm-6 col-6 container">
                   <div class="holder">
                     <div class="skills js"> 30%</div>
-                    <img src="JS.jpg" alt="JavaScript" height="200px" class="center">
+                    <img src="Images/JS.jpg" alt="JavaScript" height="200px" class="center">
                  </div>
                 </div>
 
@@ -119,7 +119,7 @@
                 <div class="col-lg-4 col-md-6 col-sm-6 col-6 container">
                   <div class="holder">
                     <div class="skills c"> 75%</div>
-                    <img src="C++ .jpg" alt="C++"  class="center" width="330px" height="200px">
+                    <img src="Images/C++.jpg" alt="C++"  class="center" width="330px" height="200px">
                   </div>
                 </div>
 
@@ -127,7 +127,7 @@
                 <div class="col-lg-4 col-md-6 col-sm-6 col-6 container">
                   <div class="holder">
                     <div class="skills sql"> 80%</div>
-                    <img src="SQL.png" alt="SQL"  width="300px" class="center">
+                    <img src="Images/SQL.png" alt="SQL"  width="300px" class="center">
                   </div>
                 </div>
 
@@ -135,7 +135,7 @@
                 <div class="col-lg-4 col-md-6 col-sm-6 col-6 container">
                   <div class="holder">
                     <div class="skills java"> 60%</div>
-                    <img src="java.png" alt="Java"  width="300px" class="center">
+                    <img src="Images/java.png" alt="Java"  width="300px" class="center">
                   </div>
                 </div>
               </div>
@@ -155,7 +155,7 @@
         <div class="col-lg-6 mx-auto">
           <div class="service">
             <div class="icon">
-              <img src="Service3.jpg" alt="Printing Services">
+              <img src="Images/Service3.jpg" alt="Printing Services">
             </div>
             <div>
               <h1>Printing Services</h1>
@@ -170,7 +170,7 @@
       <div class="row gy-4">
         <div class="col-lg-4 col-md-4 col-sm-12 col-12 ">
           <div class="card">
-            <img src="Mug.jpg" alt="Custom Mug" style="width:100%"> 
+            <img src="Images/Mug.jpg" alt="Custom Mug" style="width:100%"> 
             <h1>Mugs</h1>
             <p class="price">ETB 250-350</p>
             <p style="font-family: 'Alegreya', serif;">Glossy, Inside-Colored, Magic Mugs, Frosted Mason Jars</p>
@@ -179,7 +179,7 @@
         </div>
         <div class="col-lg-4 col-md-4 col-sm-12 col-12 img-fluid">
           <div class="card">     
-            <img src="Tshirt.jpg" alt="Custom T-shirt" style="width:100%"> 
+            <img src="Images/Tshirt.jpg" alt="Custom T-shirt" style="width:100%"> 
             <h1>T-shirts</h1>
             <p class="price">ETB 350-500</p>
             <p style="font-family: 'Alegreya', serif;">T-shirt, Sweater, Hoodie</p>
@@ -188,7 +188,7 @@
         </div>
         <div  class="col-lg-4 col-md-4 col-sm-12 col-12 img-fluid">
           <div class="card">
-            <img src="Pillow.jpg" alt="Custom Pillow" style="width:100%"> 
+            <img src="Images/Pillow.jpg" alt="Custom Pillow" style="width:100%"> 
             <h1>Pillows</h1>
             <p class="price">ETB 350</p>
             <p></p>
@@ -197,7 +197,7 @@
         </div>
         <div class="col-lg-4 col-md-4 col-sm-12 col-12 img-fluid">
           <div class="card">     
-            <img src="waterbottle.jpg" alt="Custom Waterbottle" style="width:100%"> 
+            <img src="Images/waterbottle.jpg" alt="Custom Waterbottle" style="width:100%"> 
             <h1>Waterbottles</h1>
             <p class="price">ETB 300</p>
             <p><button><a href="https://t.me/customMade21">See More</a></button></p>
@@ -205,7 +205,7 @@
         </div>
         <div class="col-lg-4 col-md-4 col-sm-12 col-12 img-fluid">
           <div class="card"> 
-            <img src="Keychain.jpg" alt="Custom Keychain" style="width:100%"> 
+            <img src="Images/Keychain.jpg" alt="Custom Keychain" style="width:100%"> 
             <h1>Keychains</h1>
             <p class="price">ETB 150</p>
             <p></p>
@@ -215,7 +215,7 @@
                 <!-- Icons-->
         <div class="col-lg-4 col-md-4 col-sm-12 col-12 img-fluid">
           <div class="card" style=" display: block;">
-            <img src="Profile.jpg" alt="21 Gifts" style="width:100%">
+            <img src="Images/Profile.jpg" alt="21 Gifts" style="width:100%">
             <h1>xxi.Gifts</h1>
             <p class="title">Ethiopia, Addis Ababa</p>
             <div class="stickyicon-list">
