--- a/index.html
+++ b/index.html
@@ -246,7 +246,7 @@
         <input type="text" id="lname" name="lastname" placeholder="Your last name..">
     
         <label for="country">Country</label>
-        <select id="country" name="country" autofocus>
+        <select id="country" name="country">
           <option value="Your Country..">Your Country..</option>
           <option value="Ethiopia">Ethiopia</option>
           <option value="canada">Canada</option>
