--- a/index.html
+++ b/index.html
@@ -57,13 +57,13 @@
               </div>
           </div>
       </div>
-  </section>
+    </section>
 
     <!--About Page-->
     <section id = "About" class="container mt-3 mb-5">
         <div class="post-heading text-center">
-           <h2 class="display-4 font-weight-bold" style="color: rgb(106, 104, 102);">About Me</h2>
-           <hr class="w-50 mx-auto">
+           <h2 class="display-3">About Me</h2>
+           <hr class="w-50">
         </div>
 
         <div class="row">
@@ -72,7 +72,8 @@
           </div>
 
           <div class="col-lg-5">
-            <p class=" Paragraph mt-5 pt-5 ">My Name is Hanna Abebe. I am a 3<sup>rd</sup> Year
+            <br><br><br>
+            <p class=" Paragraph mt-lg-5 pt-lg-5 ">My Name is Hanna Abebe. I am a 3<sup>rd</sup> Year
                Computer Science Student <a href= "https://actamericancollege.com"> @<abbr title="American College Of Technology">ACT</abbr>  </a>.
                I have Taken Some of the Basic Programming Languages i.e. C++, SQL, & Java and also
                Markup and Scripting Languages:- HTML, CSS, & Javascript. In Addition, I am a Small-Business Owner.
@@ -85,7 +86,7 @@
     
       <div id="MySkills" class="container mt-3 mb-5">
           <div class="post-heading text-center">
-            <h2 class="display-4 font-weight-bold" style="color: rgb(106, 104, 102);">My Skills</h2>
+            <h2 class="display-3">My Skills</h2>
             <hr class="w-50 mx-auto">
           </div>
           <div class="row">
@@ -147,7 +148,7 @@
     <section id = "Services" >
       <div class="row">
         <div class="post-heading text-center container mt-3">
-          <h2 class="display-4 font-weight-bold" style="color: rgb(106, 104, 102);">Services</h2>
+          <h2 class="display-3">Services</h2>
           <hr class="w-50 mx-auto">
         </div>
       </div>
@@ -232,7 +233,7 @@
     <!--Contact Page-->
     <div id = "Contact" class="container mt-3 mb-5">
       <div class="post-heading text-center">
-        <h2 class="display-4 font-weight-bold" style="color: rgb(106, 104, 102);">Contact</h2>
+        <h2 class="display-3">Contact</h2>
         <hr class="w-50 mx-auto">
      </div>
 
