--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
           </div>
 
           <div class="left-column"><!--class="col-lg-6 about"-->
-            <img id="about-pic" src="Images/aboutMeImg - Copy.jpeg"> <!--TO BE EDITTED-->
+            <img id="about-pic" src="Images/aboutMeImg.jpeg"> <!--TO BE EDITTED-->
             <h5 style="text-align:center; line-height: 0;">Personalize Theme</h5>
             
             <div id="theme-opt-wrapper" class="mt-3">
