--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@
             </div>
             <br>
             <div class="resume"> 
-              <a target="blank" href="Hanna Abebe(CV).pdf" class="btn btn-outline-light" >Download Resume!</a></div>
+              <a target="blank" href="Hanna Abebe.pdf" class="btn btn-outline-light" >Download Resume!</a></div>
           </div>
         </div>
       </div>
